0.4.2 - currently working on
- [#2183] Fix: tx_oelib_templatehelper::init() differs from tx_seminars_templatehelper()
- [#2178] Feature: Add methods hideSubpartsArray and unhideSubpartsArray to tx_oelib_templatehelper
- [#2179] Fix: Unit test failure: tx_oelib_templatehelperchild_testcase::testEnableFieldsCanBeDifferentForDifferentVersionParameters
- [#2161] Fix: Oelib produces SQL error in User -> Workspace
- [#1778] Feature: Provide an abstraction for session handling
- [#1137] Change: Change =& new to = new and remove the & from before function names
- [#2152] Change: Skip locale config check tests in Windows
- [#2151] Fix: tx_oelib_templatehelper::getSubpartForCallback has to be protected in PHP 5.3
- [#2130] Change: countRecords should only find dummy records
- [#2098] Change: Make securePiVars set non-existent piVars to secure to zero
- [#2106] Fix: createDummyFolder() does not work on certain folder names
- [#1219] Feature: Add an id attribute to templatehelper::createRestrictedImage
- [#2121] Change: Rename "Oliver's Extension Library" to "One is Enough Library"
- [#2093] Change: Allow creating fake front ends without adding a record to the pages table
- [#1840] Change: Add basic unit tests for templatehelper::createRestrictedImage
- [#1915] Feature: Add a function createFakeFrontEnd to the testing framework
- [#2092] Change: Update the test record icon in seminars and oelib
- [#1705] Feature: Add functionality to create dummy files
- [#2031] Fix: loginFrontEndUser should store the complete FE user record in $GLOBALS['TSFE']->fe_user->user
- [#1894] Change: Only reset the auto_increment value if it is much higher than the highest UID
- [#1986] Change: Only reset the auto_increment value if actually will be different than the current value

0.4.1 - released 2005-05-25
- [#1893] Feature: Allow to use custom "is_dummy" fields per table
- [#1908] Fix: Registration for event not possible if umlauts in fe-user "Name" field